# rendering_test

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildfile  citty.1.trace  citty.2.trace  citty.3.trace  citty.cmb  citty.trace  citty.ui  manifest  repositories.manifest  vcpkg.json
.run/: Regenerate compilation database.run.xml
assets/: car.dae  car.mtl
citty/: CMakeLists.txt  Window.cpp  Window.hpp  buildfile  citty  citty-graphics-only  citty-graphics-only.cpp  citty-test  citty.cpp  tests
citty/components/: Transform.hpp
citty/engine/: Archetype.hpp  ArchetypeGraph.cpp  ArchetypeGraph.hpp  ArchetypeGraph.test.cpp  ArchetypeRecord.cpp  ArchetypeRecord.hpp  ArchetypeRecord.test.cpp  Component.hpp  ComponentContainer.cpp  ComponentContainer.hpp  ComponentManager.cpp  ComponentManager.hpp  ComponentStore.cpp  ComponentStore.hpp  Engine.cpp  Engine.hpp  Entity.hpp  EntityId.hpp  EntityIdStore.cpp  EntityIdStore.hpp  EntityManager.cpp  EntityManager.hpp  EntityStore.cpp  EntityStore.hpp  HanaTupleDestructure.hpp  System.cpp  System.hpp
citty/engine/components/: TestComponents.hpp  Transform.hpp
citty/glad/: glad.c  glad.h
citty/graphics/: AsGlEnum.hpp  AssetLoader.cpp  AssetLoader.hpp  AssimpModelLoader.cpp  AssimpModelLoader.hpp  Buffer.cpp  Buffer.hpp  BufferUsage.hpp  Framebuffer.cpp  Framebuffer.hpp  GLFWRenderingSystem.cpp  GLFWRenderingSystem.hpp  GLFWRenderingSystem.test.cpp  GraphicsEngine.cpp  GraphicsEngine.hpp  GraphicsEntity.hpp  GraphicsSynchronizationSystem.cpp  GraphicsSynchronizationSystem.hpp  GraphicsSynchronizationSystem.test.cpp  Image.cpp  Image.hpp  Material.hpp  Math.cpp  Math.hpp  Mesh.hpp  Model.hpp  ModelLoading.cpp  ModelLoading.hpp  OpenGlError.cpp  OpenGlError.hpp  PointLightEntity.hpp  Renderbuffer.cpp  Renderbuffer.hpp  Renderer.cpp  Renderer.hpp  RenderingEngine.cpp  RenderingEngine.hpp  RenderingSystem.cpp  RenderingSystem.hpp  Shader.cpp  (+20 more)
citty/graphics/buffers/: Buffer.cpp  Buffer.hpp  ColorVertexBuffer.cpp  ColorVertexBuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  ModelMatBuffer.cpp  ModelMatBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
citty/graphics/components/: Camera.hpp  Color.hpp  Graphics.hpp  Material.hpp  Mesh.hpp  MeshFile.hpp  MeshRef.hpp  PointLight.hpp  Texture.hpp  Vertex.hpp
citty/input/: InputSystem.cpp  InputSystem.hpp
citty/map/: MapRenderingSystem.cpp  MapRenderingSystem.hpp  RoadType.hpp  utils.cpp  utils.hpp
citty/map/components/: Node.hpp  Road.hpp
citty/traffic/: PathfindingSystem.cpp  PathfindingSystem.h  Vehicle.cpp
citty/traffic/components/: Path.h  Target.h
docs/: RENDERING_PIPELINE.md
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/rapidxml/: CMakeLists.txt  manual.html  rapidxml_iterators.hpp
lib/stb_image/: CMakeLists.txt
old/input/: InputSystem.cpp  InputSystem.hpp
old/map/: MapRenderingSystem.hpp
old/traffic/: Vehicle.h
resources/: main_ui.glade~
samples/: monterrey.osm  sample_map.osm
shaders/: depth.vsh  fragment.fsh  hdr.fsh  hdr.vsh  lightAccumulation.fsh  lightAccumulation.vsh  lightCulling.csh  old.vsh  vertex.vsh
src/: Window.cpp  Window.h  main.cpp
src/Simulation/: Node.cpp  Node.h  Road.cpp  Road.h
src/components/: Transform.h
src/engine/: ComponentManager.cpp  ComponentManager.h  ComponentStore.h  Engine.cpp  Engine.h  Entity.h  EntityManager.cpp  EntityManager.h  System.h
src/graphics/: Camera.cpp  Camera.h  Drawable.cpp  Drawable.h  GraphicsEngine.cpp  GraphicsEngine.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  OpenGlError.cpp  OpenGlError.h  RenderingSystem.cpp  RenderingSystem.h  Shader.cpp  Shader.h  Vertex.h  VertexArray.cpp  VertexArray.h  VertexArrayBuilder.h  (+2 more)
(+57 files in other folders)
